<resources>
    <string name="app_name">SchedulerApp</string>
    <string-array name="TimePeriod">
        <item>9 am-10 am</item>
        <item>10 am-11 am</item>
        <item>11 am-1 pm</item>
        <item>2 pm-3 pm</item>
        <item>3 pm-4 pm</item>
        <item>4 pm-5 pm</item>
    </string-array>
    <string-array name="Subjects">
        <item>Software Engineering</item>
        <item>AI</item>
        <item>ACN</item>
        <item>FEDT</item>
        <item>Algorithms</item>
        <item>Data Structure</item>
    </string-array>
    <string-array name="RoomNumber">
        <item>E-403</item>
        <item>D-315</item>
        <item>C-405</item>
        <item>E-601</item>
        <item>D-317</item>
        <item>E-601</item>
    </string-array>

    <string-array name="Proffs">
        <item>Prof Bharti</item>
        <item>Prof Amit P Singh</item>
        <item>Prof Dr. M Bala Krishna</item>
        <item>Sh. Rahul Johari</item>
        <item>Dr. Rinkaj Goyal</item>
        <item>Prof Syed</item>
    </string-array>

    <string-array name="Attendance">
        <item>40</item>
        <item>72</item>
        <item>65</item>
        <item>67</item>
        <item>78</item>
        <item>85</item>
    </string-array>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try Again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="week_days">Day schedule</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="drawer_open">when drawer is open</string>
    <string name="drawer_close">when drawer is closed</string>
    <string name="Notif">Notification</string>
    <string name="title_activity_notification_view">NotificationView</string>
    <string name="mark_your_attendance">Mark Your Attendance</string>
    <string name="submit">Submit</string>
    <string name="mark_attendance">Mark Attendance</string>
</resources>
