<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/welcome"
        android:id="@+id/welcome"
        />

    <item android:title="@string/week_days"
        >
        <menu>
            <group android:checkableBehavior="single"


                >
                <item
                    android:id="@+id/mon"
                    android:title="@string/mon"
                    />
                <item
                    android:id="@+id/tue"
                    android:title="@string/tue"/>
                <item
                    android:id="@+id/wed"
                    android:title="@string/wed"/>
                <item
                    android:id="@+id/thu"
                    android:title="@string/thu"/>
                <item
                    android:id="@+id/fri"
                    android:title="@string/fri"/>
                <item
                    android:id="@+id/notif"
                    android:title="@string/Notif"
                    />


            </group>
        </menu>
    </item>

</menu>